--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
         "php": "~7.4 || ~8.0",
         "ext-mbstring": "*",
         "ext-json": "*",
-        "sylius/resource-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0",
-        "sylius/grid-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0",
-        "sylius/ui-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0",
-        "sylius/locale-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0"
+        "sylius/resource-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0 || ~1.11.0 || ~1.12.0",
+        "sylius/grid-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0 || ~1.11.0 || ~1.12.0",
+        "sylius/ui-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0 || ~1.11.0 || ~1.12.0",
+        "sylius/locale-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0 || ~1.11.0 || ~1.12.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^6.1",
@@ -46,7 +46,7 @@
     },
     "extra": {
         "symfony": {
-            "require": "^4.4"
+            "require": "^4.4 || ^5.4 || ^6.0 || ^6.3"
         },
         "branch-alias": {
             "dev-master": "1.0-dev"
