--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,24 @@
     "description": "Add a settings panel to your monofony.",
     "license": "MIT",
     "require": {
-        "php": "~7.4 || ~8.0",
+        "php": "^7.4 || ^8.0",
         "ext-mbstring": "*",
         "ext-json": "*",
-        "sylius/resource-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0",
-        "sylius/grid-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0",
-        "sylius/ui-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0",
-        "sylius/locale-bundle": "~1.6.0 || ~1.7.0 || ~1.8.0 || ~1.9.0 || ~1.10.0"
+        "sylius/resource-bundle": "^1.6",
+        "sylius/grid-bundle": "^1.6",
+        "sylius/ui-bundle": "^1.6",
+        "sylius/locale-bundle": "^1.6"
     },
     "require-dev": {
         "phpspec/phpspec": "^6.1",
         "sensiolabs/security-checker": "^6.0",
         "sylius-labs/coding-standard": "^3.1",
-        "symfony/browser-kit": "^4.4 || ^5.0",
-        "symfony/debug-bundle": "^4.4 || ^5.0",
-        "symfony/dotenv": "^4.4 || ^5.0",
-        "symfony/intl": "^4.4 || ^5.0",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.0",
-        "symfony/web-server-bundle": "^4.4 || ^5.0",
+        "symfony/browser-kit": "^4.4 || ^5.0 || ^6.0",
+        "symfony/debug-bundle": "^4.4 || ^5.0 || ^6.0",
+        "symfony/dotenv": "^4.4 || ^5.0 || ^6.0",
+        "symfony/intl": "^4.4 || ^5.0 || ^6.0",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.0 || ^6.0",
+        "symfony/web-server-bundle": "^4.4 || ^5.0 || ^6.0",
         "lchrusciel/api-test-case": "^3.0 || ^5.0",
         "friendsofphp/php-cs-fixer": "^2.16.1",
         "friendsofsymfony/oauth-server-bundle": "^1.6 || >2.0.0-alpha.0 ^2.0@dev",
@@ -36,10 +36,6 @@
         }
     },
     "autoload-dev": {
-        "classmap": ["tests/Application/src/Kernel.php"],
-        "psr-4": {
-            "App\\": "tests/Application/src/"
-        }
     },
     "scripts": {
         "phpcs": "php-cs-fixer fix --using-cache=false"
@@ -50,6 +46,11 @@
         },
         "branch-alias": {
             "dev-master": "1.0-dev"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": false
         }
     }
 }
